# Real-Time-Edge-Detection-Viewer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  verify.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-build.yml  web-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gl/: GLRenderer.cpp  GLRenderer.h
app/src/main/cpp/jni/: ImageProcessor.cpp  ImageProcessor.h  JNIBridge.cpp
app/src/main/java/com/edgedetector/: CameraManager.kt  EdgeGLRenderer.kt  MainActivity.kt  NativeProcessor.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
